# goodreads-to-storygraph

./: Dockerfile  README.md  book_sync.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-push.yml
